--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La chouette agence est une grande agence de web design basée à Lyon 
-	qui aident les entreprise à gagner en visibilité et en actractivité sur internet.">
+    <meta name="description" content="La chouette agence est une  agence de web design basée à Lyon 
+	qui aident les entreprise à gagner en visibilité et en actractivité sur internet.
+	Que ce soit pour créer votre site de A à Z ou rafraîchir votre site , nous sommes là pour vous.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -11,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-    <title>La chouette agence Lyon présentation</title>
+    <title>La chouette agence , entreprise de web design à Lyon</title>
 
     
 <!-- Analytics -->
