--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-					<img src="img/1.jpg" alt="photo illustrant la refonte d'un site web pour un journal" class="img-responsive portfolio-thumb" />
+				<a href="#" data-lightbox="img/photo journal Lyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+					<img src="img/photo journal Lyon.jpg" alt="photo illustrant la refonte d'un site web pour un journal" class="img-responsive portfolio-thumb" />
 				</a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -169,8 +169,8 @@
 				</p>
 			</article>
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-					<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="photo d'un shooting photo avec un photographe"/>
+				<a href="#" data-lightbox="img/photo photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+					<img src="img/photo photographe.jpg" class="img-responsive portfolio-thumb" alt="photo d'un shooting photo avec un photographe"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -182,8 +182,8 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-					<img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="photo de matériels de photographe"/>
+				<a href="#" data-lightbox="img/phto voyageur.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+					<img src="img/photo voyageur.jpg" class="img-responsive portfolio-thumb" alt="photo de matériels de photographe"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -193,8 +193,8 @@
 				</p>
 			</article>
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-					<img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="creation d'un site web pour une agence de mariage"/>
+				<a href="#" data-lightbox="img/photo site web mariage Lyon.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+					<img src="img/photo site web mariage Lyon.jpg" class="img-responsive portfolio-thumb" alt="creation d'un site web pour une agence de mariage"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
