--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	Que ce soit pour créer votre site de A à Z ou rafraîchir votre site , nous sommes là pour vous.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
     <title>La chouette agence , entreprise de web design à Lyon</title>
 
@@ -264,11 +264,11 @@
 
 </div>
 <!-- Principal conteneur END -->
-<script defer src="./js/jquery-2.1.0.js"></script>
-<script defer src="./js/bootstrap.js"></script>
-<script defer src="./js/blocs.js"></script>
-<script defer src="./js/jquery.touchSwipe.js"></script>
-<script defer src="./js/gmaps.js"></script>   
+<script defer src="./js/jquery-2.1.0.min.js"></script>
+<script defer src="./js/bootstrap.min.js"></script>
+<script defer src="./js/blocs.min.js"></script>
+<script defer src="./js/jquery.touchSwipe.min.js"></script>
+<script defer src="./js/gmaps.min.js"></script>   
 
 </body>
 </html>
